fix: handles case of too long search query

--- a/frontend/src/app/shared/components/search-request/search-request.component.scss
+++ b/frontend/src/app/shared/components/search-request/search-request.component.scss
@@ -5,7 +5,10 @@
   user-select: none;
   padding: 40px 40px 35px;
   background-color: white;
-    @media (max-width: 945px) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  @media (max-width: 945px) {
     padding: 20px;
   }
 }
